--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+a.button{
+    border-radius: 3.5rem;
+    line-height: 2.5rem;
+    padding: 0 2.6rem;
+    font-size: 1.2rem;
+    margin-top: .5rem;
+}
+
+a,a:hover,a:focus{
+    color: white;
+    text-decoration: none;
+}
+
+.primary-bg{
+    background-color: #c4581b;
+    background-image: url('/assets/overlay.png'), linear-gradient(90deg, #c4581b, #bf301d 90%);
+}
+
+h1{
+    margin-bottom: 4rem;
+}
+
+h1::after{
+    background: #ffffff;
+    position: relative;
+    top: 0.75em;
+    content: '';
+    height: 2px;
+    display: block;
+    width: 5rem;
+    margin: auto;
+}
