--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -31,12 +31,8 @@
 }
 
 #banner{
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 10%;
+    height: 98%;
+    position: relative;
 }
 
 #banner .logo{
@@ -44,6 +40,25 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+
+.know .content{
+    font-size: 1.2rem;
+    line-height: 2.3rem;
+}
+
+.mission{
+    margin-top: 5rem;
+}
+
+.mission,.vision,.value{
+    line-height: 2rem;
+}
+
+@media (max-width:992px) {
+    .vision{
+        margin-top: 5rem;
+    }
 }
 
 #banner .header::before{
