--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,55 +1,4 @@
-<div id="banner">
-    <div class="header">
-    </div>
-    <div class="logo d-flex align-items-center flex-column col-10 col-sm-7 col-md-5 col-lg-4">
-        <h1>
-            <img class="" width="100%" src="/assets/logo.png" alt="tjmai-engenharia">
-        </h1>
-        <a class="button primary-bg" href="home#know">Conheça</a>
-    </div>
-</div>
-<div id="know" class="know mt-4 pt-4">
-    <h2 class="text-center">A TJ-MAI</h2>
-    <div class="content text-justify">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci augue, bibendum in enim a, feugiat consectetur ligula. Sed et blandit ex. Aliquam sed turpis sit amet quam sollicitudin vehicula. Morbi placerat efficitur mi id lobortis. Cras ultricies hendrerit enim, sed consectetur dui euismod in. Vestibulum id erat id neque tincidunt vestibulum ut sed eros. Donec quis felis eu metus interdum fringilla auctor vitae dui. Integer auctor laoreet eros, et interdum odio varius feugiat. Nulla dolor est, vestibulum ut odio eget, tristique iaculis mi. Mauris non odio vitae nunc faucibus pulvinar quis id quam. Integer odio risus, molestie id lacus ut, ullamcorper tempus justo. Fusce in consectetur risus. Morbi tortor sem, eleifend elementum scelerisque ut, maximus in quam. Integer faucibus neque eu fringilla finibus. Integer in velit ultrices, interdum arcu quis, semper magna. Mauris vulputate vulputate risus, in interdum lorem efficitur at.
-    </div>
-</div>
-<div class="mvv my-4 pt-4">
-    <h2 class="text-uppercase text-center">Missão Visão Valores</h2>
-    <div class="mission d-block d-lg-flex px-4">
-        <div class="mr-4" style="margin-bottom:5rem">
-            <div class="mvvImg m-auto"></div>
-        </div>
-        <div class="d-flex d-lg-block flex-column align-items-center">
-            <h4 class="text-center text-lg-left text-uppercase d-inline-block">Missão</h4>
-            <div class="mt-4 pt-2 text-center text-lg-left">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci augue, bibendum in enim a, feugiat consectetur ligula. Sed et blandit ex. Aliquam sed turpis sit amet quam sollicitudin vehicula. Morbi placerat efficitur mi id lobortis. Cras ultricies hendrerit enim, sed consectetur dui euismod in. Vestibulum id erat id neque tincidunt vestibulum ut sed eros. Donec quis felis eu metus interdum fringilla auctor vitae dui. Integer auctor laoreet eros, et interdum odio varius feugiat.
-            </div>
-        </div>
-    </div>
-    <div class="vision d-block d-lg-flex px-4">
-        <div class="ml-4 d-block d-lg-none" style="margin-bottom:5rem">
-            <div class="mvvImg m-auto"></div>
-        </div>
-        <div class="d-flex d-lg-block flex-column align-items-center">
-            <h4 class="text-center text-lg-right text-uppercase d-inline-block float-right">Visão</h4>
-            <div class="mt-4 pt-2 text-center text-lg-right float-right">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci augue, bibendum in enim a, feugiat consectetur ligula. Sed et blandit ex. Aliquam sed turpis sit amet quam sollicitudin vehicula. Morbi placerat efficitur mi id lobortis. Cras ultricies hendrerit enim, sed consectetur dui euismod in. Vestibulum id erat id neque tincidunt vestibulum ut sed eros. Donec quis felis eu metus interdum fringilla auctor vitae dui. Integer auctor laoreet eros, et interdum odio varius feugiat.
-            </div>
-        </div>
-        <div class="ml-4 d-none d-lg-block" style="margin-bottom:5rem">
-            <div class="mvvImg m-auto"></div>
-        </div>
-    </div>
-    <div class="value d-block d-lg-flex px-4">
-        <div class="mr-4" style="margin-bottom:5rem">
-            <div class="mvvImg m-auto"></div>
-        </div>
-        <div class="d-flex d-lg-block flex-column align-items-center">
-            <h4 class="text-center text-lg-left text-uppercase d-inline-block">Valores</h4>
-            <div class="mt-4 pt-2 text-center text-lg-left">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci augue, bibendum in enim a, feugiat consectetur ligula. Sed et blandit ex. Aliquam sed turpis sit amet quam sollicitudin vehicula. Morbi placerat efficitur mi id lobortis. Cras ultricies hendrerit enim, sed consectetur dui euismod in. Vestibulum id erat id neque tincidunt vestibulum ut sed eros. Donec quis felis eu metus interdum fringilla auctor vitae dui. Integer auctor laoreet eros, et interdum odio varius feugiat.
-            </div>
-        </div>
-    </div>
-</div>
+<app-banner></app-banner>
+<app-know></app-know>
+<app-mvv></app-mvv>
+<app-portfolio></app-portfolio>
