--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -14,10 +14,13 @@
   height: 8rem;
   left: 0;
   position: absolute;
-  top: 0;
+  top: -1px;
   width: 100%;
 }
 
+#portfolio h2{
+  margin-top: 5rem;
+}
 
 #portfolio::after{
   background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPScxOTAwJyBoZWlnaHQ9JzE1MCcgdmlld0JveD0nMCAwIDE5MDAgMTUwJyBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSdub25lJz48cGF0aCBkPSdNMCwyNS43QzI0My40LDg0LDU5Ni43LDE1MCw5NTAsMTUwYzM1My4zLDAsNzA2LjYtNjYsOTUwLTEyNC4zVjE1MEgwVjI1Ljd6JyBmaWxsPScjZmZmZmZmJy8+PC9zdmc+");
@@ -30,4 +33,49 @@
   position: absolute;
   width: 100%;
   box-shadow: inset 0 -1px 0 0 #ffffff;
+}
+
+.projects{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5rem 0;
+}
+
+.projects .project{
+  display: flex;
+  flex-direction: column;
+  /* max-width: 300px;
+  max-height: 420px; */
+  width: 25%;
+  margin: 0 12.5%;
+  margin-top: 30px;
+  height: 30vw;
+  border-radius: 10px;
+  border: solid white 2px;
+}
+
+.projects .project .image{
+  height: 15vw;
+  max-height: 210px;
+  background-size: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+@media (max-width:806px) {
+  .projects .project .image{
+    height: 40vw;
+    max-height: none;
+  }
+  .projects{
+    justify-content: center;
+  }
+  .projects .project{
+    width: 80%;
+    max-width: none;
+    max-height: none;
+    margin: 0;
+    margin-top: 30px;
+    height: 80vw;
+  }
 }
