--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -2,6 +2,9 @@
     <app-nav-bar></app-nav-bar>
     <div class="header">
     </div>
+    <video autoplay [muted]="true" loop id="myVideo">
+        <source src="/assets/video/videobg.mp4" type="video/mp4">
+    </video>
     <div class="logo d-flex align-items-center flex-column col-10 col-sm-7 col-md-5 col-lg-4">
         <h1>
             <img class="" width="100%" src="/assets/logo.png" alt="tjmai-engenharia">
