--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
+<app-loader></app-loader>
 <app-banner></app-banner>
 <app-know></app-know>
 <app-mvv></app-mvv>
 <app-portfolio></app-portfolio>
+<app-contact></app-contact>
