--- a/src/app/know/know.component.html
+++ b/src/app/know/know.component.html
@@ -1,6 +1,4 @@
 <div id="know" class="know mt-4">
     <h2 class="text-center">A TJ-MAI</h2>
-    <div class="content text-justify">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci augue, bibendum in enim a, feugiat consectetur ligula. Sed et blandit ex. Aliquam sed turpis sit amet quam sollicitudin vehicula. Morbi placerat efficitur mi id lobortis. Cras ultricies hendrerit enim, sed consectetur dui euismod in. Vestibulum id erat id neque tincidunt vestibulum ut sed eros. Donec quis felis eu metus interdum fringilla auctor vitae dui. Integer auctor laoreet eros, et interdum odio varius feugiat. Nulla dolor est, vestibulum ut odio eget, tristique iaculis mi. Mauris non odio vitae nunc faucibus pulvinar quis id quam. Integer odio risus, molestie id lacus ut, ullamcorper tempus justo. Fusce in consectetur risus. Morbi tortor sem, eleifend elementum scelerisque ut, maximus in quam. Integer faucibus neque eu fringilla finibus. Integer in velit ultrices, interdum arcu quis, semper magna. Mauris vulputate vulputate risus, in interdum lorem efficitur at.
-    </div>
+    <div class="content text-justify" [innerHTML]="know"></div>
 </div>
