--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -9,7 +9,18 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: -20;
 }
+
+#myVideo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    filter: brightness(50%);
+    z-index: -10;
+  }
 
 #banner::after {
     background-size: 125% 100%;
