--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,13 +1,21 @@
 <div id="portfolio" class="degrade">
   <div class="">
     <h2 class="white text-center c-white" style="font-size: 1.5rem;">Projetos</h2>
-    <div class="projects">
-      <div *ngFor="let project of projects" class="project justify-content-between">
-        <div class="image" [ngStyle]="{backgroundImage:'url('+project.imgUrl+')'}"></div>
-        <h3 class="white text-center c-white mt-2" style="font-size: 1.2rem;">{{project.title}}</h3>
-        <p class="c-white text-center">{{project.text | trim:numberChar()}}</p>
-        <div class="pb-3">
-          <button class="button m-auto d-block px-3" type="button" name="button">Ver mais</button>
+    <div class="carouselContainer">
+      <div class="nav">
+        <button *ngIf="actualPage > 0 " class="left" (click)="backColection()" type="button" name="button"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
+        <button *ngIf="actualPage < projects.length-1 " class="right" (click)="nextColection()"  type="button" name="button"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+      </div>
+      <div #carousel class="carousel">
+        <div *ngFor="let colection of projects" class="projects">
+          <div *ngFor="let project of colection.data" [@colectionStates]="colection.state" class="project justify-content-between">
+            <div class="image" [ngStyle]="{backgroundImage:'url('+project.acf.image+')'}"></div>
+            <h3 class="white text-center c-white mt-2" style="font-size: 1.2rem;">{{project.title.rendered}}</h3>
+            <p class="c-white text-center" >{{project.content.rendered | trim:numberChar()}}</p>
+            <div class="pb-3">
+              <button class="button m-auto d-block px-3" routerLink="/projects/{{project.id}}" type="button" name="button">Ver mais</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
