--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,8 @@ body,html{
     font-family: 'IBM Plex Sans', sans-serif;
     height: 100%;
     /* overflow-x: hidden; */
+}
+.smoothScroll{
     scroll-behavior: smooth;
 }
 body{
@@ -64,7 +66,7 @@ button.button{
 }
 
 .mvvImg{
-    background-image: url('assets/mvv.jpg');
+    /*background-image: url('assets/mvv.jpg');*/
     background-size: cover;
     width: 320px;
     height: 320px;
