--- a/src/app/generic-page/generic-page.component.html
+++ b/src/app/generic-page/generic-page.component.html
@@ -3,7 +3,7 @@
 <div class="itemContent mt-4">
   <div *ngIf="item">
     <h2 class="text-center">{{item.title.rendered}}</h2>
-    <div class="content" [innerHTML]="item.content.rendered"></div>
+    <div class="content" [innerHTML]="item.content.rendered | keepHtml"></div>
   </div>
 </div>
 <app-contact [showInfo]="false"></app-contact>
