--- a/src/app/mvv/mvv.component.html
+++ b/src/app/mvv/mvv.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="d-flex d-lg-block flex-column align-items-center">
             <h4 class="text-center text-lg-left text-uppercase d-inline-block">{{mvv[0].title.rendered}}</h4>
-            <div class="mt-4 pt-2 text-center text-lg-left" [innerHTML]="mvv[0].content.rendered"></div>
+            <div class="mt-4 pt-2 text-center text-lg-left" [innerHTML]="mvv[0].content.rendered | keepHtml"></div>
         </div>
     </div>
     <div class="vision d-block d-lg-flex px-4">
@@ -15,7 +15,7 @@
         </div>
         <div class="d-flex d-lg-block flex-column align-items-center">
             <h4 class="text-center text-lg-right text-uppercase d-inline-block float-right">{{mvv[1].title.rendered}}</h4>
-            <div class="mt-4 pt-2 text-center text-lg-right float-right" [innerHTML]="mvv[1].content.rendered"></div>
+            <div class="mt-4 pt-2 text-center text-lg-right float-right" [innerHTML]="mvv[1].content.rendered | keepHtml"></div>
         </div>
         <div class="ml-4 d-none d-lg-block" style="margin-bottom:5rem">
             <div class="mvvImg m-auto" [ngStyle]="{backgroundImage:'url('+mvv[1].acf.image+')'}"></div>
@@ -27,7 +27,7 @@
         </div>
         <div class="d-flex d-lg-block flex-column align-items-center">
             <h4 class="text-center text-lg-left text-uppercase d-inline-block">{{mvv[2].title.rendered}}</h4>
-            <div class="mt-4 pt-2 text-center text-lg-left" [innerHTML]="mvv[2].content.rendered"></div>
+            <div class="mt-4 pt-2 text-center text-lg-left" [innerHTML]="mvv[2].content.rendered | keepHtml"></div>
         </div>
     </div>
 </div>
